# reddit-extractor

./: .env_template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  pyproject.toml  ruff.toml  summary.md
.claude/: settings.json
.claude/skills/: conventional-commit.md
backend/: pyproject.toml
backend/.claude/: settings.json
backend/data/: README.md
backend/evals/datasets/: ciso_2026-04-01_2026-04-30.pkl  dataset_stats.py  export_dataset-ciso_2026-04-01_2026-04-30.py
backend/evals/evaluators/: evaluators.py
backend/evals/experiments/: run_pipeline_evals.py
backend/src/: agent.py  api.py  chat_service.py  extract_pain_points.py  main.py
backend/src/agents/: agent.py  extract_pain_points.py  main_agent.py  pp_cluster_builder.py  pp_extractor.py  tools.py
backend/src/agents/main_agent/: main_agent.py  tools.py
backend/src/core/: llm.py
backend/src/routers/: chat.py
backend/src/schemas/: schema.py
backend/src/services/: chat_service.py  download_subreddit.py  experiment_clustering.py  extract_pain_points.py  filter_pain_points.py  ingest_posts.py  threads_manager.py
backend/tests/: test_utils.py
backend/tests/data/: ciso_2026-04-01_2026-04-30.pkl  ciso_2026-04-01_2026-04-30_clustered.pkl  r_ciso_2026-04-01_2026-04-30_comments.jsonl  r_ciso_2026-04-01_2026-04-30_posts.jsonl  small_subreddit.jsonl  small_subreddit_verbatims.jsonl
src/: build_threads.py  clustering.py  extract_pain_points.py  filter_pain_points.py  ingest_comments.py  ingest_posts.py  opportunity_finder.py  types.py  utils.py
tests/: test_utils.py
(+20 files in other folders)
