[project]
name = "reddit-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.99.0",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langgraph>=1.1.10",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "scrapi-reddit>=0.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
reportMissingTypeStubs = "none"
