[project]
name = "reddit-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.99.0",
    "dotenv>=0.9.9",
    "einops>=0.8.2",
    "fastapi>=0.136.1",
    "hdbscan>=0.8.42",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langgraph>=1.1.10",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "scrapi-reddit>=0.2.2",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
reportMissingTypeStubs = "none"
